# data-contract-validator

./: .env  .gitignore  README.md  playground.py  pyproject.toml  report.html
.github/workflows/: ci.yml
sample_data/: api_tennis_live_sample.json  tennis_matches.json  users.csv  users.json
src/data_contract_validator/: __main__.py  cli.py  console.py  models.py  providers.py  reporting.py  validator.py
tests/: test_cli.py  test_models.py  test_providers.py  test_reporting.py  test_tennis_models.py  test_validator.py
